# lemoce.github.io

./: .gitignore  README.md  about.html  archive.html  atom.xml  contact.html  index.html  pessoal.cabal  site.hs  stack.yaml
css/: default.css
posts/: 2018-09-12-comecando-a-filosofar.html  2018-09-14-utilizando-libevent.html  2018-09-18-antropomorfismo-incongruencias.html  2018-10-16-eleicoes-e-fake-news.html  2018-10-26-autoreflexao-sobre-tudo.html  2018-10-30-acabou-a-eleicao.html  2018-11-12-utilizando-o-pcre2grep.html  2018-11-21-70-livros-de-filosofia-a-ser-lidos.html  2018-12-12-estudo-sensacoes.html  2018-12-31-pensamentos-sobre-virada-do-ano.html  2019-06-07-agua-a-rolar.html  2019-09-17-qual-a-vantagem-em-perdoar.html  2020-02-21-pensamentos-de-carnaval.html  2020-07-02-70-livros-de-filosofia-a-ser-lidos.html  2020-07-02-70-livros-de-filosofia-a-ser-lidos.markdown  2020-07-07-um-novo-comeco.html  2020-07-07-um-novo-comeco.markdown  2020-08-06-NixOS-a-descoberta.html  2020-08-06-NixOS-a-descoberta.markdown  2020-08-13-Haskell-a-redescoberta.html  2020-08-13-Haskell-a-redescoberta.markdown  2020-08-14-NixOS-arquivo-de-configuracao-do-emacs.html  2020-08-14-NixOS-arquivo-de-configuracao-do-emacs.markdown  2020-08-17-avancos-nos-estudos-de-git.html  2020-08-17-avancos-nos-estudos-de-git.markdown  2020-08-24-videos-sobre-ofender.html  2020-08-24-videos-sobre-ofender.markdown  2020-09-04-importancia-de-se-aprender-git.html  2020-09-04-importancia-de-se-aprender-git.markdown  2021-03-29-Migrando-para-fedora-34.html  2021-03-29-Migrando-para-fedora-34.markdown  (+36 more)
(+61 files in other folders)
